# scratchbar

./: Cargo.toml  LICENSE  README.md  shell.nix
common/src/tui/: layout.rs  mod.rs
common/src/utils/: mod.rs
example-bar/: Cargo.toml  run  run-install
example-bar/src/: desktop.rs  main.rs  runner.rs  utils.rs  xtui.rs
example-bar/src/clients/: hypr.rs  ppd.rs  pulse.rs  tray.rs  upower.rs
example-bar/src/driver/: energy.rs  hypr.rs  mod.rs  pulse.rs  time.rs  tray.rs
example-controller/: Cargo.toml  run
example-controller/src/: main.rs  utils.rs  xtui.rs
example-controller/src/clients/: hypr.rs  mod.rs  pulse.rs  tray.rs  upower.rs
example-controller/src/control/: energy.rs  hypr.rs  mod.rs  pulse.rs  time.rs  tray.rs
example-controller/src/xtui/: text.rs
panel-controller/: Cargo.toml
panel-controller/src/: lib.rs  logging.rs  main.rs
panel-controller/src/inst/: ipc.rs  mod.rs
panel-controller/src/utils/: reload.rs
scratchbar-bin/: Cargo.toml
src/: api.rs  controller.rs  controller2.rs  ctrl_ipc.rs  data.rs  display_panel.rs  driver_ipc.rs  host.rs  host_ctrl_ipc.rs  lib.rs  logging.rs  main.rs  menu_watcher.py  monitors.rs  simple_bar.rs  terminals.rs  tui.rs  utils.rs
src/bins/: host.rs  mod.rs  monitors.rs
src/bins/host/: entry_point.rs  mod.rs  monitor_inst.rs  monitor_listen.rs
src/bins/inst/: ipc.rs  mod.rs
src/clients/: clock.rs  displays.rs  hypr.rs  mod.rs  ppd.rs  pulse.rs  tray.rs  upower.rs
src/inst/: ipc.rs  mod.rs
src/modules/: fixed.rs  hypr.rs  mod.rs  ppd.rs  pulse.rs  time.rs  tray.rs  upower.rs
src/panels/: bar.rs  menu.rs  mod.rs  proc.rs
src/procs/: bar_panel.rs  controller.rs  menu_panel.rs  mod.rs
src/procs/menu_panel/: menu_watcher.py
src/tui/: api.rs  layout.rs  mod.rs  render.rs  repr.rs  text.rs  text_impl.rs  tui_api.rs  util.rs
src/utils/: callback.rs  channels.rs  dbg.rs  emit.rs  io.rs  mod.rs  reload.rs
