[package]
name = "bar-panel-controller"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["example-bar"]

[dependencies]
crossterm = { version = "0.29.0", default-features = false, features = [
    "event-stream",
    "serde",
] }
anyhow = "1.0.100"
flexi_logger = "0.31.7"
futures = { version = "0.3.31", default-features = false }
image = { version = "0.25.9", default-features = false, features = [
    "png",
    "serde",
] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["rc"] }
tokio = { version = "1.49.0", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "io-util",
    "process",
    "fs",
] }
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
tempfile = "3.24.0"
serde_json = { version = "1.0.149", features = ["raw_value"] }
base64 = "0.22.1"
tokio-util = { version = "0.7.18", features = ["rt", "time"] }
unicode-width = "0.2.2"
