[package]
name = "scratchbar"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["scratchbar-bin", "example-controller"]

[dependencies]
# Public dependencies
log = "0.4.29"

# Lib/Bin internal dependencies
crossterm = { version = "0.29.0", default-features = false }
anyhow = "1.0.100"
flexi_logger = "0.31.7"
serde = { version = "1.0.228", features = ["rc"] }
postcard = { version = "1.1.3", features = [
  "alloc",
  "use-std",
], default-features = false }
tempfile = "3.24.0"
unicode-width = "0.2.2"
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }

# Bin dependencies
tokio = { version = "1.49.0", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "io-util",
  "process",
  "fs",
], optional = true }
tokio-util = { version = "0.7.18", features = ["rt", "time"], optional = true }
serde_json = { version = "1.0.149", features = ["raw_value"], optional = true }
base64 = { version = "0.22.1", optional = true }

[features]
__bin = [
  "dep:tokio",
  "dep:tokio-util",
  "dep:serde_json",
  "dep:base64",
  "crossterm/serde",
  "crossterm/event-stream",
]
