[package]
name = "example-bar"
version = "0.1.0"
edition = "2024"

[dependencies]
bar-panel-controller.workspace = true

crossterm = { version = "0.29.0", default-features = false, features = [
    "event-stream",
    "serde",
] }

anyhow = "1.0.100"
chrono = { version = "0.4.43", default-features = false }
flexi_logger = "0.31.7"
futures = { version = "0.3.31", default-features = false }
hyprland = { version = "0.4.0-beta.3", features = [
    "async-lite",
    "listener",
], default-features = false }
image = { version = "0.25.9", default-features = false, features = [
    "png",
    "serde",
] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["rc"] }
tokio = { version = "1.49.0", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
] }
zbus = "5.13.2"
libpulse-binding = "2.30.1"
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
tempfile = "3.24.0"
system-tray = "0.8.5"
serde_json = { version = "1.0.149", features = ["raw_value"] }
base64 = "0.22.1"
tokio-util = { version = "0.7.18", features = ["rt", "time"] }
unicode-width = "0.2.2"
