[package]
name = "example-bar"
version = "0.1.0"
edition = "2024"

[dependencies]
bar-panel-controller = { path = ".." }

tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["rt", "time"] }
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }

anyhow = "1.0.100"
chrono = { version = "0.4.43", default-features = false }
futures = { version = "0.3.31", default-features = false }
hyprland = { version = "0.4.0-beta.3", features = [
    "async-lite",
    "listener",
], default-features = false }
log = "0.4.29"
serde = { version = "1.0.228", features = ["rc"] }
zbus = "5.13.2"
libpulse-binding = "2.30.1"
system-tray = "0.8.5"
