[package]
name = "scratchbar-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
scratchbar = { path = ".." } # NOTE: Delete this line and uncomment the next for standalone controller repo
# scratchbar = { git = "https://github.com/maxdexh/scratchbar" }

tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["rt", "time"] }

anyhow = "1.0.100"
chrono = { version = "0.4.43", default-features = false }
futures = { version = "0.3.31", default-features = false }
hyprland = { version = "0.4.0-beta.3", features = [
  "async-lite",
  "listener",
], default-features = false }
log = "0.4.29"
serde = { version = "1.0.228", features = ["rc"] }
zbus = "5.13.2"
libpulse-binding = "2.30.1"
system-tray = "0.8.5"
image = { version = "0.25.9", default-features = false, features = ["png"] }
